<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">花颜</string>
    <string name="login_type">login_video</string>
    <string name="download_apk_url">http://a.tn990.com/app.apk</string>
    <string name="login_btn_style">登录按钮红色</string>
    <string name="hint">提示</string>
    <string name="action_cancel">取消</string>
    <string name="action_ok">确定</string>
    <string name="record_camera_title">拍摄</string>
    <string name="record_camera_back">返回</string>
    <string name="record_camera_next">下一步</string>
    <string name="record_camera_back_delete">回删</string>
    <string name="record_camera_delay">延迟</string>
    <string name="record_camera_filter">滤镜</string>
    <string name="record_camera_init_faild">初始化视频存储路径失败</string>
    <string name="record_camera_progress_message">正在合并…</string>
    <string name="record_camera_check_available_faild">少年，存储器爆了！至少需要200M存储空间才能继续拍摄！</string>
    <string name="record_camera_open_audio_faild">无法打开录音设备！</string>
    <string name="record_camera_save_faild">视频信息保存失败！</string>
    <string name="record_camera_exit_dialog_message">(*_*) 您拍摄了一段视频，还未合成，确定要放弃这段视频吗？</string>
    <string name="delete_onlinemusic_message">是否删除已下载音乐？</string>
    <string name="record_camera_import">导入</string>
    <string name="record_camera_import_image">照片</string>
    <string name="record_camera_import_image_choose">从本地照片选择</string>
    <string name="record_camera_import_image_faild">导入照片失败</string>
    <string name="record_camera_import_video">视频</string>
    <string name="record_camera_import_video_title">截\t取</string>
    <string name="record_camera_import_video_choose">从本地视频选择</string>
    <string name="record_camera_import_video_faild">导入视频失败</string>
    <string name="record_camera_tools_focus">焦点</string>
    <string name="record_camera_tools_led">闪光</string>
    <string name="record_camera_ghost">幽灵</string>
    <string name="record_camera_preview_title">制作</string>
    <string name="record_camera_preview_pre">拍摄</string>
    <string name="record_camera_preview_next">下一步</string>
    <string name="record_camera_cancel_dialog_yes">放弃</string>
    <string name="record_camera_cancel_dialog_no">继续拍摄</string>
    <string name="record_video_transcoding_faild">视频转码失败</string>
    <string name="record_video_transcoding_success">视频保存在:%s</string>
    <string name="record_read_object_faild">拍摄信息读取失败！请检查SD卡，稍后重试！</string>
    <string name="record_preview_theme">主题</string>
    <string name="record_preview_title">预览</string>
    <string name="record_preview_theme_original">原始</string>
    <string name="record_preview_theme_load_faild">主题加载失败</string>
    <string name="record_preview_encoding">正在合成视频中…</string>
    <string name="record_preview_encoding_format">合成视频中\t%d%%</string>
    <string name="record_preview_music_nothing">无</string>
    <string name="record_preview_tab_theme">主题</string>
    <string name="record_preview_tab_filter">滤镜</string>
    <string name="record_preview_building">预览准备中…</string>
    <string name="download_success">下载完成</string>
    <string name="download_error">下载失败</string>
    <string name="loading_tips">加载中…</string>
    <string name="nodata">没有数据</string>
    <string name="record_camera_import_video_folder_title">相册</string>
    <string name="dialog_encoding_text">视频处理中...</string>
    <string name="record_camera_import_tips">拖动画面可以调整\n视频的显示位置</string>
    <string name="importVideo_tips_select">左右滑动时间轴，截取你想要的视频片段</string>
    <string name="background_color_textview">背景颜色:</string>
    <string name="nexttip">下一步</string>
    <string name="record_camera_import_title6">裁剪</string>
    <string name="record_camera_import_video_exists">视频不存在</string>
    <string name="record_camera_import_gif_faild">导入Gif失败</string>
    <string name="video_layout_loading">正在缓冲...</string>
    <string name="record_camera_import_type_convert">正在进行格式转换...</string>
    <string name="video_transcoding_faild">视频转码失败</string>
    <string name="tab_home_text">Home</string>
    <string name="tab_mine_text">Mine</string>
    <string name="login_desp">登陆就表明已阅读并同意服务条款</string>
    <string name="shared_to">Share To</string>
    <string name="add_follow_true">已关注</string>
    <string name="add_follow_false">关 注</string>
    <string name="pull_to_refresh_pull_label">下拉刷新</string>
    <string name="pull_to_refresh_release_label">松开后刷新</string>
    <string name="pull_to_refresh_refreshing_label">刷新\u2026</string>
    <string name="pull_to_refresh_footer_release_label">松开后加载</string>
    <string name="pull_to_refresh_footer_pull_label">上拉加载更多</string>
    <string name="pull_to_refresh_footer_refreshing_label">加载中\u2026</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="camera_photo">相册</string>
    <string name="camera_picture">拍照</string>
    <string name="action_clip">裁剪</string>
    <string name="msg_camera_invalid_permission_denied">无法打开相机，可能是权限被拒绝</string>
    <string name="msg_camera_invalid_initial_failed">相机初始化失败，无法打开相机</string>
    <string name="msg_camera_invalid_unknown_error">无法打开相机，未知错误</string>
    <string name="msg_could_not_save_photo">无法保存图片</string>
    <string name="msg_clipping_image">正在裁剪图片</string>
    <string name="app_desp">新趣是一个专为用户提供视频播放和分享的平台。 在这里你不仅可以观看各种有趣的短视频，同时也可以通过短视频把你的生活点滴分享给其他人，当然和粉丝互动或者点评其他视频也是很有意思的。 还等什么，快来上传短视频吧，让新趣和世界认识你。</string>
    <string name="upload_notwifi_tips">您的设备未接入WIFI网络，已暂停了视频上传任务，将会在连接WIFI网络后自动开始上传</string>
    <string name="upload_wifi_tips">设备已接入WIFI网络，上传任务自动开始</string>
    <string name="app_server">应用服务器</string>
    <string name="sts_server">http://oss-demo.aliyuncs.com/app-server/sts.php</string>
    <string name="bucket">nq6-video</string>
    <string name="bucket_hint">Bucket</string>
    <string name="set">设置</string>
    <string name="object_name">请输入OSS文件名，默认test</string>
    <string name="default_object_name">test</string>
    <string name="normal">普通上传下载</string>
    <string name="download">下载</string>
    <string name="upload">普通上传</string>
    <string name="multipart_upload"> 断点上传</string>
    <string name="multipart_pause">暂停</string>
    <string name="multipart_resume">恢复</string>
    <string name="multipart">断点续传上传</string>
    <string name="resize_width">宽，默认100</string>
    <string name="resize_height">高，默认100</string>
    <string name="resize">图片缩略</string>
    <string name="watermark">文字水印</string>
    <string name="watermark_hint">请输入水印文字</string>
    <string name="watermark_size">大小，默认100</string>
    <string name="image_sample">更多图片处理示例</string>
    <string name="crop">裁剪</string>
    <string name="rotate">旋转</string>
    <string name="camera_error_title">相机异常</string>
    <string name="cannot_connect_camera">无法连接相机，请在系统设置里修改权限</string>
    <string name="camera_disabled">相机不可用</string>
    <string name="upload_file_success">上传成功</string>
    <string name="upload_file_fail">上传失败</string>
    <string name="upload_file">文件上传中...</string>
    <string name="compose_file">文件合成中...</string>
    <string name="get_file_url">获取上传视频中...</string>
    <string name="video_range_title_1">拖动两侧滑杆裁剪视频时长</string>
    <string name="video_range_title_2">裁剪后视频时长:</string>
    <string name="ksy_tips_permissions">您的设备未成功获得视频编辑使用权限！请务必在视频合成前打开网络开关并连接可用的网络。在此之前您仍可以使用拍摄功能。</string>
    <string name="ksy_tips_compose">您的设备未成功获得视频编辑使用权限！要使用视频合成，请务必打开网络开关并连接可用的网络，连接网络后自动开始授权。若您的设备已经连接网络但授权失败，请尝试先关闭网络再重新打开。</string>
    <string name="ksy_tips_permissions_title">视频编辑功能使用提示</string>
    <string name="duration_format" translatable="false"><xliff:g id="hours">%1$s</xliff:g> <xliff:g id="minutes">%2$s</xliff:g></string>
    <string name="durationformatshort" translatable="false"><xliff:g id="format">%2$d:%3$02d</xliff:g></string>
    <string name="durationformatlong" translatable="false"><xliff:g id="format">%1$d:%2$02d:%3$02d</xliff:g></string>
    <string name="media_music_fragment_hot_title">热门歌曲</string>
    <string name="media_music_fragment_like_title">我的收藏</string>
    <string name="media_music_fragment_location_title">本地歌曲</string>
    <string name="home_fragment_follow_title">关注</string>
    <string name="home_fragment_hot_title">热门</string>
    <string name="home_fragment_topic_title">话题</string>
    <string name="mine_fragment_works_title">作品</string>
    <string name="mine_fragment_like_title">喜欢</string>
    <string name="mine_fragment_message_title">消息</string>
    <string name="binding_phone_tips">根据《互联网跟帖评论服务管理规定》需要验证手机号才能发布内容</string>
    <string name="video_compose_canel_tips">取消该视频合并任务后该视频所有的编辑效果将丢失并且无法恢复，确定要放弃合并吗？</string>
    <string name="video_upload_canel_tips">取消上传任务后将不可恢复，上传成功可以分享给好友哦~ 确定要取消上传任务吗？</string>
    <string name="share_home_tips">我刚刚用新趣小视频APP上传了一部视频：</string>
    <string name="home_share_error_tips">您上传的视频已设置为他人不可见，无法分享，请前往 [个人中心-我的作品] 中修改作品权限!</string>
    <string name="grade_tips_content">感谢你使用新趣，看会视频让您的眼睛放松吧。您可以前往应用上吊给我们好评噢！</string>
    <string name="permissions_image_tips">保存图片失败！SD写入取权限被拒绝！要保存图片至你的设备，请务必授予我们SD卡写入权限！是否现在去设置？</string>
    <string name="detele_video_tips">确定要删除此视频吗？删除后将不可恢复!</string>
    <string name="set_peivate_video_tips">将视频设置为私密状态后其他用户将无法观看到你的这部作品，确定要这样做吗？</string>
    <string name="not_wifi_play_video_tips">您当前未连接WIFI网络，使用流量播放可能会消耗一定流量，（播放过的视频且缓存未删除再次播放无需消耗流量） 是否继续播放？</string>
    <string name="open_weixin_tips">已复制微信号，打开微信-右上角加号-添加朋友-公众号-长按粘贴-搜索并关注公众号，是否立即前往关注？</string>
    <string name="tips_first_record_msg">个性音乐在这里</string>
    <string name="btn_login_out">退出登录</string>
    <string name="tip_force_offline">您的帐号已在其它地方登录</string>
    <string name="dialog_input_text_hint">请输入文字内容</string>
    <string name="chat_up_finger">手指上滑，取消发送</string>
    <string name="chat_voice_cancel">松开手指，取消发送</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="chat_press_talk">按住 说话</string>
    <string name="chat_release_send">松开 发送</string>
    <string name="chat_release_cancel">松开 取消</string>
    <string name="chat_image">图片</string>
    <string name="chat_file">文件</string>
    <string name="chat_photo">拍摄</string>
    <string name="chat_video">小视频</string>
    <string name="chat_audio_too_short">录音过短，请重试</string>
    <string name="group_member_profile">成员资料</string>
    <string name="group_member_quiet">设置禁言</string>
    <string name="group_member_manage">设为管理员</string>
    <string name="group_member_card">群名片</string>
    <string name="group_member_del">移出本群</string>
    <string name="profile_detail">详细资料</string>
    <string name="profile_back">返回</string>
    <string name="profile_id">账号</string>
    <string name="profile_remark">备注名</string>
    <string name="profile_black">加入黑名单</string>
    <string name="profile_chat">发送消息</string>
    <string name="profile_del">删除好友</string>
    <string name="profile_now_group">所在分组</string>
    <string name="login_next">下一步</string>
    <string name="register_user_data_complement_tips">提示：性别确认后，将不能更改</string>
    <string name="register_complment_title">完善个人资料</string>
    <string name="register_complment_more">完成</string>
    <string name="sex_man">男</string>
    <string name="sex_wumen">女</string>
    <string name="edit_info">编辑资料</string>
    <string name="modify_nickname">昵称</string>
    <string name="modify_id">ID</string>
    <string name="modify_bind_phone">手机号码</string>
    <string name="modify_sex">性别</string>
    <string name="modify_height">身高</string>
    <string name="modify_weight">体重</string>
    <string name="modify_wx">微信</string>
    <string name="modify_qq">QQ</string>
    <string name="modify_constellation">星座</string>
    <string name="modify_city">所在城市</string>
    <string name="modify_desp">个人介绍</string>
    <string name="modify_tag">形象标签</string>
    <string name="modify_singtrue">个性签名</string>
    <string name="modify_authentication">主播认证</string>
</resources>