<?xml version="1.0" encoding="utf-8"?>
<layout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <com.yc.liaolive.view.widget.CommentTitleView
            android:id="@+id/title_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:commentTitle="@string/edit_info" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/background_dark">
            <com.yc.liaolive.view.layout.ReboundScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="none"
                android:scrollbarSize="0dp"
                android:fillViewport="true">
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorTextWhite"
                        android:orientation="vertical">
                        <!--头像相册-->
                        <android.support.v7.widget.RecyclerView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="3dp"
                            android:id="@+id/recycler_view"
                            android:background="@color/background_dark"/>
                        <!--相册上传提示-->
                        <TextView
                            android:id="@+id/tv_image_tips"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/h3"
                            android:textColor="#464646"
                            android:background="@color/background_dark"
                            android:paddingLeft="5dp"
                            android:paddingBottom="5dp"
                            android:visibility="gone"/>
                        <!--昵称-->
                        <com.yc.liaolive.view.widget.CommenItemLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/item_nickname"
                            app:itemTitle="@string/modify_nickname"/>
                        <com.yc.liaolive.view.widget.CommenItemLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/item_id"
                            app:itemShowMoreIcon="false"
                            android:clickable="true"
                            app:itemTitle="@string/modify_id"/>
                        <com.yc.liaolive.view.widget.CommenItemLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/item_sex"
                            app:itemTitle="@string/modify_sex"/>
                        <com.yc.liaolive.view.widget.CommenItemLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/item_user_height"
                            app:itemTitle="@string/modify_height"
                            android:visibility="gone"/>
                        <com.yc.liaolive.view.widget.CommenItemLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/item_user_weight"
                            app:itemTitle="@string/modify_weight"
                            android:visibility="gone"/>
                        <com.yc.liaolive.view.widget.CommenItemLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/item_user_start"
                            app:itemTitle="@string/modify_constellation"
                            android:visibility="gone"/>
                        <com.yc.liaolive.view.widget.CommenItemLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/item_city"
                            app:itemTitle="@string/modify_city"/>
                        <com.yc.liaolive.view.widget.CommenItemLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/item_user_desp"
                            app:itemTitle="@string/modify_desp"
                            android:visibility="gone"/>
                        <com.yc.liaolive.view.widget.CommenItemLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/item_user_tag"
                            app:itemTitle="@string/modify_tag"
                            android:visibility="gone"/>
                        <com.yc.liaolive.view.widget.CommenItemLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/item_user_singtrue"
                            app:itemTitle="@string/modify_singtrue"/>
                        <com.yc.liaolive.view.widget.CommenItemLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/item_authentication"
                            app:itemShowLine="false"
                            app:itemTitle="@string/modify_authentication"/>
                        <View
                            android:layout_width="match_parent"
                            android:layout_height="10dp"
                            android:background="@color/background_dark" />
                        <com.yc.liaolive.view.widget.CommenItemLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/item_bind_phone"
                            app:itemTitle="@string/modify_bind_phone" />
                        <com.yc.liaolive.view.widget.CommenItemLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/item_bind_wx"
                            app:itemTitle="@string/modify_wx"
                            android:visibility="gone"/>
                        <com.yc.liaolive.view.widget.CommenItemLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/item_bind_qq"
                            app:itemTitle="@string/modify_qq"
                            android:visibility="gone"/>
                        <View
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/item_height"
                            android:background="@color/background_dark">
                        </View>
                    </LinearLayout>
                </FrameLayout>
            </com.yc.liaolive.view.layout.ReboundScrollView>
        </RelativeLayout>
    </LinearLayout>
</layout>