<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <android.support.design.widget.AppBarLayout
        android:id="@+id/tool_bar_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">
        <com.yc.liaolive.msg.view.TemplateTitle
            android:id="@+id/profile_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            app:backText="@string/profile_back"
            app:canBack="true"
            app:titleText="@string/profile_detail" />
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:background="@color/white"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <com.yc.liaolive.view.CircleImageView
            android:id="@+id/avatar"
            android:layout_width="115dp"
            android:layout_height="115dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/ic_default_user_head" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/text_gray1"
            android:textSize="16sp" />
    </LinearLayout>
    <com.yc.liaolive.msg.view.LineControllerView
        android:id="@+id/id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:linName="@string/profile_id"/>
    <com.yc.liaolive.msg.view.LineControllerView
        android:id="@+id/remark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:linCanNav="true"
        app:linName="@string/profile_remark"/>
    <com.yc.liaolive.msg.view.LineControllerView
        android:id="@+id/blackList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:linIsSwitch="true"
        app:linName="@string/profile_black"/>
    <com.yc.liaolive.msg.view.LineControllerView
        android:id="@+id/group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:linCanNav="true"
        app:linIsBottom="true"
        android:onClick="onClick"
        app:linName="@string/profile_now_group"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/btnDel"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="40dp"
            android:background="@drawable/bg_negative_btn"
            android:textColor="@color/text_btn"
            android:textSize="18sp"
            android:gravity="center"
            android:clickable="true"
            android:onClick="onClick"
            android:text="@string/profile_del"/>
        <TextView
            android:id="@+id/btnChat"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/bg_positive_btn"
            android:textColor="@color/text_btn"
            android:textSize="18sp"
            android:clickable="true"
            android:gravity="center"
            android:onClick="onClick"
            android:text="@string/profile_chat"/>
    </LinearLayout>
</LinearLayout>
