<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.yc.liaolive.view.widget.CommentTitleView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/title_view"
            app:commentTitle="@string/register_complment_title"
            app:commentMoreTitle="@string/register_complment_more"
            app:commentShowMoreTitle="true"
            app:commentTitleStyle="1"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/iv_user_icon"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerInParent="true"
                android:src="@drawable/ic_list_empty_icon_2"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/et_input"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:gravity="center"
                android:hint="请输入昵称"
                android:maxLength="8"
                android:inputType="textAutoComplete"
                android:textSize="16sp"
                android:textColorHint="@color/common_h3"
                android:textColor="@color/black3"
                android:background="@drawable/bg_login_weixin_shape"/>
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:orientation="horizontal"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="10dp">
            <TextView
                android:id="@+id/tv_man"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/sex_man"
                android:textColor="@color/text_black_white_selector"
                android:background="@drawable/bg_register_sex_selector"
                android:layout_marginRight="5dp"/>
            <TextView
                android:id="@+id/tv_wumen"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/sex_wumen"
                android:textColor="@color/text_black_white_selector"
                android:background="@drawable/bg_register_sex_selector"
                android:layout_marginLeft="5dp"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/register_user_data_complement_tips"
            android:textColor="@color/app_red_style"
            android:gravity="center_horizontal"/>
        <TextView
            android:id="@+id/tv_tips"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/h6"
            android:gravity="center_horizontal"
            android:textColor="@color/common_h3"
            android:layout_margin="5dp"/>
        <TextView
            android:id="@+id/btn_next"
            android:layout_width="150dp"
            android:layout_height="43dp"
            android:layout_marginTop="16dp"
            android:text="@string/login_next"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/white"
            android:background="@drawable/btn_login_app_style_cicle"
            android:gravity="center"/>
    </LinearLayout>
</layout>